--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PZ'
 - !lcsh 'Nursery rhymes'
+- GITenberg
 title: 'The Only True Mother Goose Melodies
 
   Without Addition or Abridgement'
